# Gtest_template

./: README.md
gtest empty cmake project/: CMakeLists.txt
gtest empty cmake project/src/: CMakeLists.txt  some_class.cpp  some_class.h
gtest empty cmake project/test/: CMakeLists.txt
